tests/semantic_error/gv2_retorne_tipo_errado.g
/* erro: retorne com tipo incompativel com tipo de retorno da funcao */
funcao [
  falha() : int
  [ c : car; ]
  {
    c = 'x';
    retorne c;
  }
]

principal {
  escreva falha();
  novalinha;
}
